--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Improve your mind.">
+    <meta name="description" content="The game for your mind!">
     <meta name="author" content="Leone Veiga">
 
     <title>Plus and Times</title>
@@ -34,19 +34,20 @@
 <body>
 
 
+
 <!-- Facebook -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10';
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <!-- =========== -->
 
 
-  
+
 
 <section id="home" style="background-color:rgb(35,49, 64);">
   <div class="container">
@@ -56,13 +57,9 @@
             <div class="intro-message">
               <img src="img/logo100.jpg">
               <h1>Plus and Times</h1>
-              <h3>Exercite sua mente!</h3>
-              <h3>
-                <a href="http://www.plusandtimes.com/pt-br"><img src="img/bra.png" class="img-flag-pat" data-toggle="tooltip" data-placement="top" title="Versão em Português"></a>
-                <a href="http://www.plusandtimes.com"      ><img src="img/eng.png" class="img-flag-pat" data-toggle="tooltip" 
-                data-placement="top" title="English Version"></a>
-              </h3>
-              <a href="level01_925148.html" class="btn btn-primary">Iniciar</a>
+              <h3>The game for your mind!</h3>
+              <h3> &nbsp; </h3>
+              <a href="level01_925148.html" class="btn btn-primary">Start</a>
             </div>
           </div>
         </div>
@@ -70,22 +67,28 @@
   </div>
 </section>
 
+<!-- Footer -->
 <footer>
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="copyright text-muted small">Script desenvolvido por <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brasil - 2017</p>
-            </div>
-            <div class="col-md-3">
-                <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
-            </div>
-            <div class="col-md-4">
-                <p class="copyright text-muted small">Template adaptado do <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+                <p class="copyright text-muted small">Script developed by <a href="#" > LV</a> - 2017</p>
             </div>
 
-            <div class="col-md-1">
-              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+            <div class="col-md-4">
+              <ul class="list-inline social-buttons">
+                  <li><a href="contato.html" title="email" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                  </li>
+                  <li><a href="https://www.facebook.com/plusandtimes" title="facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                  </li>
+                  <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+              </ul>
             </div>
+
+            <div class="col-md-4">
+                <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+            </div>
+
         </div>
     </div>
 </footer>
