--- a/pt-br/level01_925148.html
+++ b/pt-br/level01_925148.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
+    <meta name="robots" content="noindex">
+
+
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
@@ -40,16 +43,19 @@
 
 <body onload="myFunction(); myFunction2();">
 
+
 <!-- Facebook -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10';
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <!-- =========== -->
+
+
 
 <section >
 
@@ -62,7 +68,7 @@
 
       var xpc = 2;
 
-      var next = "level02_818074.html";
+      var next = "level02_818074_loading.html";
 
   </script>
 
@@ -77,7 +83,7 @@
             <img style="vertical-align:middle" src="img/logo200.jpg" width="45" height="45"  >
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
           <p>
-            <a> Níveis: </a>
+            <a> Levels: </a>
             <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">01</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>02</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>03</a>
@@ -97,7 +103,7 @@
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3>Nível 01 (<i>Iniciante</i>)</h3>
+      <h3>Level 01 (<i>Beginner</i>)</h3>
       <div id="myProgress">
       <div id="myBar">0%</div>
       </div>
@@ -125,13 +131,42 @@
   </div>
   <div class="col-xs-2"></div>
 </div>
+
+
+<div class="row text-center" >
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <div class="alert alert-success alert-dismissable" style="width:100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. Find <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>. (Close it after read)
+    </div>
+  </div>
+  <div class="col-xs-1"></div>
+</div>
+
+<div class="row text-center" >
+  <div class="col-xs-1"></div>
+  <div class="col-xs-10">
+    <div class="alert alert-info alert-dismissable" style="width:100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <b style="color:rgb(201,48,44);">Tips:</b> Order doesn't matter; Use the virtual keys. (Close it after read)
+    </div>
+  </div>
+  <div class="col-xs-1"></div>
+</div>
+
+
+
+
+
+
 </div>
 <!--
 <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
 <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
 -->
 
-<hr> <!-- =============================================== -->
+<!-- =============================================== -->
 <div class="container">
         <!-- Formulário e teclados -->
         <div class="row text-center">
@@ -175,10 +210,10 @@
                       <div class="row">
                         <div class="btn-group">
                           <a type="button" class="btn btn-info"    onclick="PA0();" data-toggle="tooltip" 
-                          data-placement="bottom" title="Limpar"> C </a>
+                          data-placement="bottom" title="Clear"> C </a>
                           <a type="button" class="btn btn-primary" onclick="A0();">0</a>
                           <a type="button" class="btn btn-basic"  onclick="MA0(); " disabled data-toggle="tooltip" 
-                          data-placement="bottom" title="Sinal negativo"> &minus; </a>          
+                          data-placement="bottom" title="Minus sign"> &minus; </a>          
                         </div>
                       </div>
 
@@ -193,10 +228,10 @@
              <div class="row">
              <h2> &nbsp; </h2>
               <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
-              <h6 style="color:rgb(201,48,44);"> <b>Dicas:</b> A ordem não importa; Use o teclado virtual. </h6>
+              <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
-              <a href="#" onclick="compara();" class="btn btn-primary">Enviar</a>
+              <a href="#" onclick="compara();" class="btn btn-primary">Go</a>
             </div>
 
           </div>
@@ -236,10 +271,10 @@
                         <div class="row">
                           <div class="btn-group">
                           <a type="button" class="btn btn-info" onclick="PB0();" data-toggle="tooltip" 
-                          data-placement="bottom" title="Limpar"> C </a>
+                          data-placement="bottom" title="Clear"> C </a>
                           <a type="button" class="btn btn-primary" onclick="B0();">0</a>
                           <a type="button" class="btn btn-basic" onclick="MB0();" disabled data-toggle="tooltip" 
-                          data-placement="bottom" title="Sinal negativo"> &minus; </a>                        
+                          data-placement="bottom" title="Minus sign"> &minus; </a>                        
                           </div>
                         </div>
                   </div>
@@ -267,18 +302,23 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="copyright text-muted small">Script desenvolvido por <a href="http://www.leoneveiga.com.br" target="_blank"> Leone Veiga</a> - Brasil - 2017</p>
-            </div>
-            <div class="col-md-3">
-                <p class="copyright text-muted small">contact.plusandtimes@gmail.com</p>
-            </div>
-            <div class="col-md-4">
-                <p class="copyright text-muted small">Template adaptado do <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+                <p class="copyright text-muted small">Script developed by <a href="#" > LV</a> - 2017</p>
             </div>
 
-            <div class="col-md-1">
-              <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+            <div class="col-md-4">
+              <ul class="list-inline social-buttons">
+                  <li><a href="contato.html" title="email" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                  </li>
+                  <li><a href="https://www.facebook.com/plusandtimes" title="facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                  </li>
+                  <div class="fb-like" data-href="http://www.plusandtimes.com" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+              </ul>
             </div>
+
+            <div class="col-md-4">
+                <p class="copyright text-muted small">Template adapted from <a href="http://jekyllthemes.org/" target="_blank">Jekyll Themes</a></p>
+            </div>
+
         </div>
     </div>
 </footer>
