--- a/level05_161098_loading.html
+++ b/level05_161098_loading.html
@@ -109,7 +109,7 @@
       <div id="myProgress">
         <div id="myBar">100%</div>
       </div>
-      <h4><i>Loading Level 05 ... </i></h4>
+      <h4><i>Loading Level 05 </i></h4>
       <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
     </div>  
     <div class="col-xs-3"></div>
