--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 
     <link rel="shortcut icon" href="img/favicon.ico"></link>
 
+
+
+<!--  Google Adsense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3989787700588273",
+    enable_page_level_ads: true
+  });
+</script>
+<!--  =============== -->
+
+
+
 </head>
 
 <body>
