--- a/level01_925148.html
+++ b/level01_925148.html
@@ -138,7 +138,7 @@
   <div class="col-xs-10">
     <div class="alert alert-success alert-dismissable" style="width:100%;">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. Find <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>. (Close it after read)
+      <b style="color:rgb(201,48,44);">Instructions:</b> You know the <b style="color:rgb(201,48,44);">sum</b> and the <b style="color:rgb(201,48,44);">product</b>. Find <b style="color:rgb(201,48,44);">A</b> and <b style="color:rgb(201,48,44);">B</b>.
     </div>
   </div>
   <div class="col-xs-1"></div>
@@ -149,7 +149,7 @@
   <div class="col-xs-10">
     <div class="alert alert-info alert-dismissable" style="width:100%;">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-      <b style="color:rgb(201,48,44);">Tips:</b> Order doesn't matter; Use the virtual keys. (Close it after read)
+      <b style="color:rgb(201,48,44);">Tips:</b> Order doesn't matter; Use the virtual keys.
     </div>
   </div>
   <div class="col-xs-1"></div>
